# watever

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
include/wasmgen/: base-types.h  opcode-code-table.h  opcode.def  opcode.h  type.h  utils.h
include/watever/: AddMissingPrototypes.hpp  FixFunctionBitcasts.hpp  Instruction.def  base-types.h  base-types.hpp  binary.h  binary.hpp  color.hpp  feature.def  feature.h  feature.hpp  graph-builder.h  graph.h  import.hpp  instructions.hpp  ir.h  ir.hpp  legalization.h  legalization.hpp  linking.h  linking.hpp  opcode-code-table.h  opcode.def  opcode.h  opcode.hpp  printer.h  printer.hpp  structure.h  symbol.hpp  target.hpp  type.h  type.hpp  utils.h  utils.hpp
src/: AddMissingPrototypes.cpp  CMakeLists.txt  FixFunctionBitcasts.cpp  binary.cpp  color.cpp  graph-builder.cpp  graph.cpp  instructions.cpp  ir.cpp  legalization.cpp  opcode-code-table.c  opcode.cpp  printer.cpp  symbol.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/benchmark/: call-chain.test  dt.c  large-array-value.test  large-array-zeroinitializer.test  large-vector-value.test  large-vector-zeroinitializer.test  lit.cfg.py  loop-nest-irreducible-allbr.test  loop-nest-irreducible-onebr.test  loop-nest-reducible-varuse1.test  loop-nest-reducible-varuse2.test  loop-nest-reducible-varuse3.test  loop-nest-reducible.test  lowercase.c  mandel.c  many-funcs.test  many-preds.test  many-values.test  merge-calls.test  merge-no-phi.test  pi.c  revertBits.c  salsa20.c  store-const.test  switch-sq.test  switch.test  trellis2.test
test/color/: affinity.ll  color.ll  liveness.ll  promoted.ll
test/exceptions/: catch.cpp  catch.ll  execution.cpp  lit.cfg.py  throw.cpp  throw.ll
test/execution/: Bitfield.cpp  NonPODsByValue.cpp  ParamAliasesReturn.cpp  array_init.cpp  bitreverse.ll  bswap.ll  cout.cpp  ctors.ll  fib.cpp  fib_class.cpp  fptosi_sat.c  fptoui_sat.c  frem.ll  load_order.ll  math_intrinsics.c  math_sat.c  multi_use_gep.ll  overflow_intrinsics.ll  phi_cycle.ll  pointer_member.cpp  pointer_method.cpp  pointer_method2.cpp  printf.c  printf_vararg.c  roots_not_in_ast.ll  short_circuit_dtor.cpp  slt.ll  stat.c  war.ll  war_through_promoted.ll
test/execution/multisource/no-prototype/: main.c
test/execution/multisource/no-prototype/inputs/: foo.c
test/irreducible/: irr_fixup_phis.ll  irr_simple.ll  irr_switch.ll  irr_switch_loop.ll  irr_switch_outside.ll  lit.cfg.py
test/legalization/: arg.ll  atomicrmw.ll  branch.ll  call.ll  demo.ll  extractvalue.ll  fp-conversion.ll  load-aggregate.ll  load.ll  phi.ll  ret.ll  scalar-add.ll  scalar-and.ll  scalar-ashr.ll  scalar-fadd.ll  scalar-fdiv.ll  scalar-fmul.ll  scalar-fneg.ll  scalar-fsub.ll  scalar-gep.ll  scalar-inttofp.ll  scalar-lshr.ll  scalar-mul.ll  scalar-or.ll  scalar-sdiv.ll  scalar-select.ll  scalar-sext.ll  scalar-shl.ll  scalar-sitofp.ll  scalar-srem.ll  scalar-sub.ll  scalar-trunc.ll  scalar-udiv.ll  scalar-uitofp.ll  scalar-urem.ll  scalar-xor.ll  scalar-zext.ll  store.ll  switch.ll
test/legalization/intrinsics/: memset.ll
test/lowering/: align.ll  alloca.ll  branch.ll  call.ll  cmpxchg.ll  data-relocation.ll  empty-switch.ll  flags.ll  fp-conversion.ll  load-aggregate.ll  load-ordering.ll  load.ll  locals.ll  no-prototype.ll  phi.ll  scalar-add.ll  scalar-and.ll  scalar-ashr.ll  scalar-bitcast.ll  scalar-fadd.ll  scalar-fcmp.ll  scalar-fdiv.ll  scalar-fmul.ll  scalar-fneg.ll  scalar-frem.ll  scalar-fsub.ll  scalar-inttofp.ll  scalar-lshr.ll  scalar-mul.ll  scalar-or.ll  scalar-sdiv.ll  scalar-select.ll  scalar-sext.ll  scalar-shl.ll  scalar-sitofp.ll  scalar-srem.ll  scalar-sub.ll  scalar-udiv.ll  scalar-uitofp.ll  scalar-urem.ll  (+8 more)
test/lowering/intrinsics/: abs.ll  add_overflow.ll  ceil.ll  cmp.ll  copysign.ll  cos.ll  ctlz.ll  ctpop.ll  cttz.ll  floor.ll  fmin_max.ll  fmuladd.ll  fpclass.ll  fshl.ll  fshr.ll  is_constant.ll  memcpy.ll  memmove.ll  memset.ll  min_max.ll  ptrmask.ll  rint.ll  sub_overflow.ll  threadlocal_address.ll  trunc.ll
test/lowering/vector/: add.ll
test/regressions/: 260130-multiuse-not-in-local.ll  260209-phi-with-expr.ll
